Publish pipeline can't stand codex clones (#18)
- build-box2d-main now bails on codex branches and labels\n- removed redundant push guard\n\nTest results:\n- build net9.0 succeeded\n- 36 tests green

(cherry picked from commit a5aa520d3bafab0c21e636f5fa30a69d52c39917)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -128,8 +128,9 @@ jobs:
     build-box2d-main:
         name: Build / retrieve Box2D native libs (Dist)
         needs: detect-tag
-        if: ${{ github.event_name != 'pull_request' &&
-            !startsWith(github.ref_name, 'codex/') }}
+        if: github.ref == 'refs/heads/main' &&
+            !contains(github.ref_name, 'codex/') &&
+            !contains(github.event.pull_request.labels.*.name, 'codex')
         strategy:
             matrix:
                 include:
@@ -271,9 +272,13 @@ jobs:
                       echo "Missing Linux shared library: $lib"
                       exit 1
                     fi
+                    cp "$lib" src/UnitTests/bin/Debug/net8.0/
                     cp "$lib" src/UnitTests/bin/Debug/net9.0/
                     
                     sync
+
+            -   name: Run UnitTests (net8.0)
+                run: dotnet test src/UnitTests --configuration Debug --framework net8.0 --no-build --logger trx --results-directory TestResults
 
             -   name: Run UnitTests (net9.0)
                 run: dotnet test src/UnitTests --configuration Debug --framework net9.0 --no-build --logger trx --results-directory TestResults
@@ -308,7 +313,8 @@ jobs:
         name: Publish NuGet package
         needs: [ run-tests, build-box2d-main, detect-tag ]
         if: ${{ github.event_name != 'pull_request' &&
-            !startsWith(github.ref_name, 'codex/') }}
+            !contains(github.ref_name, 'codex/') &&
+            !contains(github.event.pull_request.labels.*.name, 'codex') }}
         runs-on: [self-hosted, Linux, X64]
         steps:
             -   id: purge
@@ -326,7 +332,7 @@ jobs:
             -   name: "Pack NuGet package"
                 run: |
                     dotnet pack src/Box2DBindings \
-                      -p:PackageVersion=${{ needs.detect-tag.outputs.pkg_ver }} \
+                      -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
                       -c Release
 
             -   name: "Push to NuGet"
